# vedic-inference-engine

./: MANIFEST.in  colab_train_vedarta.ipynb  install.sh  kaggle_train.py  pyproject.toml  setup.py  train_vedarta_50m.py  train_vedarta_compact.py
kernels/: ahamkara_agent.h  akasha_vinyasa.h  amrita_siddhi.h  ananta_siddhi.h  antahkarana_vision.h  bijam_seed.h  bindu_siddhi.h  brahman_siddhi.h  buddhi_intellect.h  chitta_kv_cache.h  chitta_samskara.h  dhanvantara_heal.h  ekatva_nadi.h  guna_siddhi.h  hiranyagarbha_template.h  indra_mesh.h  indra_net_krishi.py  indriya_execution.h  jnanendriya_sensory_bus.h  jyoti_siddhi.h  kaala_vinyasa_forecast.h  kaivalya_siddhi.h  kalpa_boot.h  karma_kanda.h  kavach_shield.h  kunapa_jala_optimizer.h  laya_siddhi.h  maha_vakyas_identity.h  mahabhuta_physics.h  manas_attention_gate.h  maya_vyuha.h  moksha_exit.h  om_kernel.h  pancha_mahabhuta_vision.h  para_vak.h  prana_nadi_power.h  prana_siddhi.h  pratibha_siddhi.h  pratyabhijna_engine.py  pratyabhijna_meta.h  (+43 more)
paper/: VEDIC_AI_WHITEPAPER.md  vedarta_arxiv.tex
vedic_inference_engine/: __init__.py  ahimsa108.py  antahkarana.py  chitta_kv.py  guna.py  indra_net.py  kala_chakra.py  kosha.py  manas_gate.py  maya_vyuha.py  para_vak.py  pramana.py  rta_dharma.py  serve.py  sphota.py  tanmatra.py
