[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vedic-inference-engine"
version = "1.0.0"
description = "ॐ Unified Vedic algorithm imports for edge AI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Joydeep Das", email = "joydeepdas.silchar@gmail.com"}
]
keywords = ["vedic", "ai", "edge", "arm64", "attention", "nyaya", "kosha"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/divineearthly/vedic-inference-engine"
Repository = "https://github.com/divineearthly/vedic-inference-engine.git"
